// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> opens and closes the <Accordion /> component 1`] = `
<div
  class="accordion__Container-sc-14x2niu-0 eQgRRn"
>
  <div
    class="accordion__Inner-sc-14x2niu-1 ionoYo"
  >
    <h1
      class="accordion__Title-sc-14x2niu-2 jQaIsB"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        What is Netflix?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
        data-testid="accordion-body"
      >
        <span>
          Netflix is a streaming service that offers a wide variety of award-winning TV programmes, films, anime, documentaries and more – on thousands of internet-connected devices.

You can watch as much as you want, whenever you want, without a single advert – all for one low monthly price. There's always something new to discover, and new TV programmes and films are added every week!
        </span>
      </div>
    </div>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        How much does Netflix cost?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
        data-testid="accordion-body"
      >
        <span>
          Watch Netflix on your smartphone, tablet, smart TV, laptop or streaming device, all for one low fixed monthly fee. Plans start from £5.99 a month. No extra costs or contracts.
        </span>
      </div>
    </div>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        Where can I watch?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
        data-testid="accordion-body"
      >
        <span>
          Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.

You can also download your favourite programmes with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
        </span>
      </div>
    </div>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        How do I cancel?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
        data-testid="accordion-body"
      >
        <span>
          Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account at any time.
        </span>
      </div>
    </div>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        What can I watch on Netflix?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
        data-testid="accordion-body"
      >
        <span>
          Netflix has an extensive library of feature films, documentaries, TV programmes, anime, award-winning Netflix originals, and more. Watch as much as you want, any time you want.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> renders the <Accordion /> with populated data 1`] = `
<div
  class="accordion__Container-sc-14x2niu-0 eQgRRn"
>
  <div
    class="accordion__Inner-sc-14x2niu-1 ionoYo"
  >
    <h1
      class="accordion__Title-sc-14x2niu-2 jQaIsB"
    >
      Frequently Asked Questions
    </h1>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        What is Netflix?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
      >
        <span>
          Netflix is a streaming service that offers a wide variety of award-winning TV programmes, films, anime, documentaries and more – on thousands of internet-connected devices.

You can watch as much as you want, whenever you want, without a single advert – all for one low monthly price. There's always something new to discover, and new TV programmes and films are added every week!
        </span>
      </div>
    </div>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        How much does Netflix cost?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
      >
        <span>
          Watch Netflix on your smartphone, tablet, smart TV, laptop or streaming device, all for one low fixed monthly fee. Plans start from £5.99 a month. No extra costs or contracts.
        </span>
      </div>
    </div>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        Where can I watch?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
      >
        <span>
          Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.

You can also download your favourite programmes with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
        </span>
      </div>
    </div>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        How do I cancel?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
      >
        <span>
          Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account at any time.
        </span>
      </div>
    </div>
    <div
      class="accordion__Item-sc-14x2niu-3 eUWAjA"
    >
      <div
        class="accordion__Header-sc-14x2niu-4 gmJyDf"
      >
        What can I watch on Netflix?
        <img
          alt="Close"
          src="/images/icons/add.png"
        />
      </div>
      <div
        class="accordion__Body-sc-14x2niu-5 jVKUfR closed"
      >
        <span>
          Netflix has an extensive library of feature films, documentaries, TV programmes, anime, award-winning Netflix originals, and more. Watch as much as you want, any time you want.
        </span>
      </div>
    </div>
  </div>
</div>
`;
